# projectrosetta

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: package.yml  publish.yml  quality.yml
docs/: README.md  releasing.md
docs/faq/: faq.md
docs/getting-started/: README.md
src/project_rosetta/cli/: abd_visualize.py  esmini_setup.py  scenario2xyt.py
src/project_rosetta/utils/: __init__.py  csv2xyt.py  paths.py  run_dat2csv.py  run_esmini.py  scenario_files.py  scenario_runner.py  scenariorunner.py  utils.py  xosc_from_py.py
tests/: test_abd_visualize.py  test_csv2xyt.py  test_run_dat2csv.py  test_run_esmini.py  test_scenario_files.py  test_scenario_runner.py  test_xosc_from_py.py
user/data/scenario/python/: speed_profile.py
