[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "project-rosetta"
version = "0.1.0"
description = "Tools for bridging simulation and test-track execution in ADAS verification"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { file = "LICENSE" }
authors = [{ name = "Project Rosetta Contributors" }]
keywords = [
  "ADAS",
  "OpenDRIVE",
  "OpenSCENARIO",
  "simulation",
  "test-track",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib>=3.10.3,<4.0.0",
  "numpy>=2.2.0,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "requests>=2.33.1,<3.0.0",
  "scenariogeneration>=0.16.4,<0.17.0",
]

[project.urls]
Homepage = "https://github.com/volvo-cars/projectrosetta"
Documentation = "https://github.com/volvo-cars/projectrosetta/tree/main/docs"
Issues = "https://github.com/volvo-cars/projectrosetta/issues"
Repository = "https://github.com/volvo-cars/projectrosetta"

[project.scripts]
rosetta-hello = "project_rosetta.cli.hello:main"
esmini-setup = "project_rosetta.cli.esmini_setup:main"
run-scenario2xyt = "project_rosetta.cli.scenario2xyt:main"
plot-path-metrics = "project_rosetta.cli.plot_path_metrics:main"
plot-xyt-metrics = "project_rosetta.cli.plot_xyt_metrics:main"
abd-log2xyt = "project_rosetta.cli.abd_log2xyt:main"
xyt2xosc = "project_rosetta.cli.xyt2xosc:main"

[tool.poetry]
packages = [{ include = "project_rosetta", from = "src", format = ["sdist", "wheel"] }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.2"
pytest = "^8.3.5"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
  "PL", # pylint
  "F",  # pyflakes
  "E",  # pycodestyle
  "D",  # pydocstyle
  "I",  # isort
]
extend-select = [
  "DOC201", # docstring-missing-returns
  "DOC202", # docstring-extraneous-returns
  "DOC402", # docstring-missing-yields
  "DOC403", # docstring-extraneous-yields
  "DOC501", # docstring-missing-exception
  "DOC502", # docstring-extraneous-exception
]
ignore = [
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
  "PLC0415", # import-outside-top-level
  "PLR0911", # too-many-return-statements
  "PLR2004", # magic-value-comparison
  "D100", # undocumented-public-module
  "D107", # undocumented-public-init
  "D205", # missing-blank-line-after-summary
  "D400", # missing-trailing-period
  "D401", # non-imperative-mood
  "D403", # first-word-uncapitalized
  "D415", # missing-terminal-punctuation
  "D203", # one-blank-line-before-class (conflicts with D211)
  "D212", # multi-line-summary-first-line (conflicts with D213)
]

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["DOC"]
".github/**" = ["DOC"]
"src/application/**" = ["DOC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
